--- a/.github/workflows/compile_nuttx.yml
+++ b/.github/workflows/compile_nuttx.yml
@@ -18,6 +18,7 @@ jobs:
           airmind_mindpx-v2_default,
           av_x-v1_default,
           bitcraze_crazyflie_default,
+          cuav_cannode-v1_gps,
           holybro_durandal-v1_default,
           holybro_durandal-v1_stackcheck,
           holybro_kakutef7_default,
